# LineMarkingBot

./: CMakeLists.txt  README.md  doc.md  package.xml
config/: joint_names_robot_ros.yaml  pid_params.yaml
launch/: badminton.launch.py  display.launch.py  gazebo.launch.py  roadmap.launch.py
meshes/: back_left_wheel.STL  back_right_wheel.STL  base_link.STL  front_left_wheel.STL  front_right_wheel.STL  lidar_link.STL
models/roadsection/: model.sdf
scripts/: pid_velocity_controller.py
urdf/: robot_ros.csv  robot_ros.urdf
world/: badminton.world  roadmap.world
